--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.10.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "mongoose": "^8.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
