--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "jotai": "^2.8.0",
     "mongodb": "^6.5.0",
     "next": "14.1.4",
     "react": "^18",
